2008-01-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/Makefile.am (maemo_launcher_SOURCES): Add 'comm_msg.c' and
	'comm_msg.h'.
	* launcher/launcher.c: Include "comm_msg.h".
	(LAUNCHER_STATEFILE): New macro.
	(statefilename): New variable.
	(sigreexec_catched): Likewise.
	(clean_daemon): Unlink statefilename.
	(LAUNCHER_STATE_SIG): New macro.
	(store_state): New function.
	(load_state): Likewise.
	(sigreexec_handler): Likewise.
	(sigs_init): Initialize SIGUSR1 to sigreexec_handler.
	(sigs_restore): Restore SIGUSR1.
	(sigs_interrupt): Allow SIGUSR1 to interrupt syscalls.
	(main): Try to load the state file, and fallback to normal
	initialization if that fails. Only daemonize and create a pid file
	if not loading the state file. Handle sigreexec_catched in the main
	event loop to store the cache, and reexec self.

2008-01-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h: New file.
	* launcher/comm_msg.c: Likewise.
	* launcher/test_lib.h: Likewise.
	* launcher/test_lib.c: Likewise.
	* launcher/test_msg.c: Likewise.
	* launcher/Makefile.am (check_PROGRAMS): New variable.
	(test_msg_SOURCES): Likewise.
	(test_msg_CPPFLAGS): Likewise.
	(TESTS): Likewise.

2007-12-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_fake_exit): Move closing the file
	descriptor to ...
	(main): ... here.

2007-12-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_fake_exit): Move function
	definition closer to other invoked_ functions.

2007-12-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (kindergarten_insert_child): Do not call
	invoked_send_fake_exit on failure.
	(main): If kindergarten_insert_child failed call
	invoked_send_fake_exit.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (child_clone): New function.
	(kindergarten_insert_child): Use child_clone instead of inline copy.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>
